# wheel2spdx

./: LICENSE  README.md  constraints.txt  pyproject.toml
wheel2spdx/: __init__.py
